# hci_uart_iso_timesync

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.sysbuild  README.md  app-core.jdebug  debug.conf  overlay-usb.conf  prj.conf  sysbuild.cmake  uart1.overlay
boards/: nrf52833dk_nrf52833.overlay  nrf52840dongle_nrf52840.conf  nrf5340_audio_dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
child_image/: hci_ipc.conf
dts/bindings/: gpio-outputs.yaml
src/: audio_sync_timer_rtc.c  controller_time.h  controller_time_nrf52.c  controller_time_nrf53_app.c  controller_time_nrf54.c  main.c
sysbuild/: ipc_radio.conf
sysbuild/ipc_radio/: prj.conf  prj_release.conf
